bdr.BDR.scala.error
Erreur de compilation :
BDR:1: error: not found: type boolean
var fini:boolean = false
         ^BDR:15: error: not found: value inverse
    inverse();
    ^BDR:36: error: reassignment to val
  } else if(litMessage = "X") {
                       ^